# Operator-Use

./: .config.example.json  pyproject.toml
.github/workflows/: publish.yml
operator_use/: __main__.py  paths.py
operator_use/acp/: server.py  stdio_channel.py
operator_use/agent/: service.py
operator_use/agent/skills/: __init__.py
operator_use/agent/tools/: governance.py  path_guard.py  registry.py
operator_use/agent/tools/builtin/: __init__.py  filesystem.py  local_agents.py  patch.py  subagents.py  terminal.py  web.py
operator_use/cli/: __init__.py  commands.py  setup.py  start.py  tui.py
operator_use/computer/macos/ax/: controls.py  core.py  patterns.py
operator_use/computer/macos/desktop/: config.py  service.py  views.py
operator_use/computer/macos/tree/: service.py  views.py
operator_use/computer/macos/watchdog/: service.py
operator_use/config/: __init__.py  service.py
operator_use/crons/: __init__.py  views.py
operator_use/gateway/channels/: discord.py  mqtt.py  telegram.py  twitch.py
operator_use/heartbeat/: service.py
operator_use/messages/: service.py
operator_use/providers/: events.py
operator_use/providers/anthropic/: llm.py
operator_use/providers/antigravity/: auth.py  llm.py
operator_use/providers/azure_openai/: llm.py
operator_use/providers/cerebras/: __init__.py  llm.py
operator_use/providers/codex/: llm.py
operator_use/providers/github_copilot/: auth.py  llm.py
operator_use/providers/google/: llm.py
operator_use/providers/groq/: llm.py
operator_use/providers/litellm/: llm.py
operator_use/providers/mistral/: llm.py
operator_use/providers/ollama/: llm.py
operator_use/providers/open_router/: llm.py
operator_use/providers/openai/: llm.py
operator_use/providers/sarvam/: tts.py
operator_use/providers/vllm/: llm.py
operator_use/subagent/: manager.py  service.py
operator_use/tools/: service.py
operator_use/utils/: helper.py
operator_use/web/browser/: config.py  service.py
operator_use/web/cdp/: __init__.py  domains.py  service.py
operator_use/web/dom/: views.py
operator_use/web/tools/: browser.py
tests/: test_agent.py  test_bus.py  test_bus_views.py  test_config.py  test_cron.py  test_gateway.py  test_governance_e2e.py  test_hooks.py  test_local_agents.py  test_message_splitting.py  test_orchestrator.py  test_plugins.py  test_providers.py  test_session.py  test_skills.py  test_tool_paths.py  test_tool_registry.py  test_utils.py
(+315 files in other folders)
