[project]
name = "operator-use"
version = "0.2.7"
description = "A personal assistant that operates your computer. Just like you."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
    "openai>=1.93.0",
    "anthropic>=0.68.1",
    "ollama>=0.5.1",
    "google-genai>=1.45.0",
    "groq>=0.29.0",
    "mistralai==1.9.11",
    "cerebras-cloud-sdk>=1.50.1",
    "litellm>=1.72.0",
    "pillow>=11.2.1",
    "python-telegram-bot>=22.0",
    "slack-bolt>=1.18.0",
    "aiohttp>=3.9.0",
    "discord.py>=2.0.0",
    "twitchio>=2.0.0,<3.0.0",
    "ipykernel>=7.2.0",
    "qq-botpy>=1.2.1",
    "lark-oapi>=1.5.3",
    "ddgs>=9.11.1",
    "markdownify>=0.13.1",
    "httpx>=0.28.1",
    "croniter>=2.0.0",
    "tabulate>=0.9.0",
    "questionary>=2.1.1",
    "rich>=14.3.3",
    "inquirerpy>=0.3.4",
    "typer>=0.24.1",
    "pydantic-settings>=2.13.1",
    "sarvamai>=0.1.26",
    "aiomqtt>=2.0.0",
    "platformdirs>=4.0.0",
    "psutil>=7.0.0",
    "pynacl>=1.6.2",
    "comtypes>=1.4.15; sys_platform == 'win32'",
    "pywin32>=311; sys_platform == 'win32'",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-ApplicationServices>=10.0; sys_platform == 'darwin'",
]

[project.scripts]
operator = "operator_use.cli.commands:app"
operator-use = "operator_use.cli.commands:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    "operator_use/web/cdp/",
    "operator_use/computer/macos/ax/",
    "operator_use/computer/windows/uia/",
    "operator_use/computer/windows/vdm/",
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"operator_use/cli/start.py" = ["E402"]
"operator_use/cli/setup.py" = ["E402"]
"operator_use/cli/commands.py" = ["E402"]
"operator_use/web/subagent.py" = ["E402"]
"operator_use/computer/subagent.py" = ["E402"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["operator_use"]
include = [
    "README.md",
    "LICENSE",
    "CONTRIBUTING.md",
    "SECURITY.md",
]
